--- a/LoginModule/Views/Form/Index.cshtml
+++ b/LoginModule/Views/Form/Index.cshtml
@@ -1,20 +1,42 @@
 ﻿@using LoginModule.Models
 @model IEnumerable<Form> 
 
-@{
-    Layout = null;
-}
 
-<!DOCTYPE HTML>
 <html>
-<head>
-    <meta name="viewport" content=" width=device-width"/>
-    <title>Employee Record</title>
-</head>
+
 <body>
-    <h4>Employees</h4>
-    <hr/>
+    <header>
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+            <div class="container">
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Employee Details</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Main" asp-action="Index">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>
+                        <li class="nav-item ml-auto">
+
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Logout">Logout</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <div class="table">
     <table class="table table-bordered table-responsive table-hover " cellpadding="8" cellspacing="8"  >
+        <thead>
         <tr>
             <th>Name</th>
             <th>EmpId</th>
@@ -27,6 +49,8 @@
             <th>Role</th>
             <th>Notes</th>
         </tr>
+            </thead>
+        <tbody>
         @foreach(Form form in Model)
             {
                 <tr>
@@ -42,8 +66,10 @@
                     <td>@form.Notes</td>
                 </tr>
             }
+            </tbody>
 
     </table>
+        </div>
     <br/>
     <br/>
     @using (Html.BeginForm("Export", "Form" , FormMethod.Post))
