--- a/LoginModule/Views/Home/Index.cshtml
+++ b/LoginModule/Views/Home/Index.cshtml
@@ -3,10 +3,34 @@
 @{
     ViewData["Title"] = "Home Page";
 }
+<header>
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <div class="container">
+            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="index">Employee Details</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                <ul class="navbar-nav flex-grow-1">
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="index">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                    </li>
+                    
 
+                   
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
 
 
 <div class="container">
+    <center><h1>LOGIN</h1></center>
     <div class="row">
         <div class="col-sm-4"></div>
         <div class="col-sm-4">
